Bug 328376 - Preset strip in preset editor does not show currently selected preset
Summary: Preset strip in preset editor does not show currently selected preset
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-03 11:58 UTC by animtim
Modified: 2013-12-17 11:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2013-12-03 11:58:34 UTC
currently if I try to scroll the preset strip and select a preset there, it scrolls properly while clicking the side arrow, but when I try to select a preset it "jumps" back to the list begining and so select the wrong preset.

Reproducible: Always

Steps to Reproduce:
1.Open preset editor panel
2.Scroll the preset strip with the right arrow button
3.Try to select a preset there
Actual Results:  
list scrolls back to begining and so select wrong preset.
Comment 1 Halla Rempt 2013-12-17 10:37:59 UTC
it actually selects the right preset -- but the selector strip seems to now have any idea of a currently selected preset anymore. So the preset loaded in the editor is correct, but the strip gets reset.
Comment 2 Halla Rempt 2013-12-17 10:39:03 UTC
It's caused by this commit:

Git commit b0c512ff05ec2f59b21ec2856b2c34828fbbc592 by Sven Langkamp. 
Committed on 04/11/2013 at 15:43. 
Pushed by langkamp into branch 'master'.

 scroll to first entry in the preset strip when switching paintop 

M +1 -0 krita/ui/widgets/kis_preset_selector_strip.cpp 

http://commits.kde.org/calligra/b0c512ff05ec2f59b21ec2856b2c34828fbbc592
Comment 3 Halla Rempt 2013-12-17 11:00:02 UTC
Git commit 321a35e3c9696caefc2faa4009a36c36aed40af9 by Boudewijn Rempt.
Committed on 17/12/2013 at 10:58.
Pushed by rempt into branch 'calligra/2.8'.

Don't scroll if we don't change paintops and reset the view settings
of the strip when we do change paintops.

This fixes the weirdness when you select a preset and scroll to the start
as well as the weirdness when you select a paintop without presets and
then select one with, and the preset icons are shown half-height.

M  +1    -0    krita/ui/widgets/kis_preset_chooser.cpp
M  +5    -1    krita/ui/widgets/kis_preset_selector_strip.cpp
M  +1    -0    krita/ui/widgets/kis_preset_selector_strip.h

http://commits.kde.org/calligra/321a35e3c9696caefc2faa4009a36c36aed40af9
Comment 4 Halla Rempt 2013-12-17 11:00:10 UTC
Git commit 55992ce09e97f6635379583695a908a3308de249 by Boudewijn Rempt.
Committed on 17/12/2013 at 10:58.
Pushed by rempt into branch 'master'.

Don't scroll if we don't change paintops and reset the view settings
of the strip when we do change paintops.

This fixes the weirdness when you select a preset and scroll to the start
as well as the weirdness when you select a paintop without presets and
then select one with, and the preset icons are shown half-height.

M  +1    -0    krita/ui/widgets/kis_preset_chooser.cpp
M  +5    -1    krita/ui/widgets/kis_preset_selector_strip.cpp
M  +1    -0    krita/ui/widgets/kis_preset_selector_strip.h

http://commits.kde.org/calligra/55992ce09e97f6635379583695a908a3308de249