BUG: 328376

Don't scroll if we don't change paintops and reset the view settings
of the strip when we do change paintops.

This fixes the weirdness when you select a preset and scroll to the start
as well as the weirdness when you select a paintop without presets and
then select one with, and the preset icons are shown half-height.