krita/ui/widgets/kis_preset_selector_strip.h
@@ -60,6 +60,7 @@ private:
     * instead of class methods
     */
     KoResourceItemView* m_resourceItemView;
+    QString m_currentPaintopID;
 };
 
 
